// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableContentSubBlockRenderer Renders editable Markdown block correctly 1`] = `

<div class="editable-content  ">
  <div class="editable-button">
  </div>
  <div>
    <p classname="govuk-body">
    </p>
    <p>
      test
    </p>
    <p>
    </p>
  </div>
</div>

`;

exports[`EditableContentSubBlockRenderer Renders non-editable Markdown block correctly 1`] = `

<div class>
  <div class>
  </div>
  <div>
    <p classname="govuk-body">
    </p>
    <p>
      test
    </p>
    <p>
    </p>
  </div>
</div>

`;
